[tool.poetry]
name = "reportlab-env"
version = "0.1.0"
description = ""
authors = ["Fergus McClean <fergus.mcclean@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "3.6.*"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
